syntax = "proto3";

package banking;

service BankingService {
  rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse);
}

message GetAccountsRequest {}

message GetAccountsResponse {
  repeated BankAccount accounts = 1;
}

message BankAccount {
  int32 id = 1;
  int32 userId = 2;
  string accountNumber = 3;
  double balance = 4;
  string currency = 5;
  string createdAt = 6;
}
